# special_topic

./: README.md  pyproject.toml
diffusion/: diffusion.py  diffusion_2regions.py
diffusion/simulation/: simulation.py
diffusion/solver/: diffusion_solver.py
diffusion/visualisation/: visualisation.py
diffusion_package/: boundary.py  diffusion.py  diffusion_eq.py  diffusion_solver.py  discreteisation.py  pde.py  pde1.py  simulation.py  single_dispatch_attempt1.py  solver.py  visualisation.py
examples/: diffusion_2regions.py  example.py  example1.py  example1D.py  example2.py
pde_package/: boundary_conditions.py  diffusion.py  pde.py  solver.py  visualisation.py
pde_package/boundary_conditions/: applier.py  base.py  dirichlet.py  neumann.py
pde_package/pde/: base.py  diffusion.py
pde_package/solver/: base.py  method_of_lines.py
pde_package/visualisation/: animate.py  base.py  plot.py
tests/: test_1D_dissBCs.py  test_bc.py  test_boundary_conditions.py  test_checkbcs.py  test_diffusionpde.py  test_pde.py  test_solver.py  test_solver2.py  test_visual.py  test_visualisation.py  test_visualisation2.py
transmission_diffusion_pde/: __init__.py
transmission_diffusion_pde.py/: interface.py
transmission_diffusion_pde.py/boundary_conditions/: applier.py  base.py  dirichlet.py  neumann.py
transmission_diffusion_pde.py/solver/: base.py  method_of_lines.py
transmission_diffusion_pde.py/visualisation/: base.py  plot.py
transmission_diffusion_pde/boundary_conditions/: __init__.py  applier.py  base.py  dirichlet.py  neumann.py
(+7 files in other folders)
