[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transmission_diffusion_pde"
version = "0.0.1"
authors = [
  { name="Aoibheann1", email="alilymurray247@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
